Replace auto-fit with auto-fill on card-container to prevent excessive spacing when viewing a small number of books at a large window size. Use margin-auto on card divs to align buttons to the bottom of the card and space other divs appropriately

--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ button {
 
 .main {
     display: grid;
-    grid-template: 1fr / 1fr 15fr 1fr;
+    grid-template: 1fr / 1fr 7fr 1fr;
     position: relative;
 }
 
@@ -241,10 +241,10 @@ button {
 .card-container {
     grid-column: 2 / 3;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     grid-template-rows: repeat(1, 300px);
     grid-auto-rows: 300px;
-    gap: 50px 20px;
+    gap: 50px 30px;
     padding: 50px 0px;
     justify-items: center;
 }
@@ -255,7 +255,7 @@ button {
     align-items: center;
     justify-content: center;
     font-size: 1.2rem;
-    padding: 20px;
+    padding: 30px 20px;
     height: 300px;
     width: 280px;
     gap: 20px;
@@ -275,6 +275,12 @@ button {
 .card > div:nth-child(1) {
     font-size: 1.5rem;
     font-weight: 600;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.card > div:nth-child(3) {
+    margin-bottom: auto;
 }
 
 .remove-btn,
